--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "leaflet": "^1.7.1",
     "mongoose": "^5.10.13",
     "mongoose-findorcreate": "^3.0.0",
     "next": "^10.0.1",
@@ -35,6 +36,7 @@
     "passport-local-mongoose": "^6.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-leaflet": "^3.0.2",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
